--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,11 @@
-site_name: My Docs
+site_name: U.R.Lucky
+
+nav:
+  - index.md
+  - Chapter1: ch1.md
 
 theme:
   name: readthedocs
+  analytics:
+    gtag: G-36HTPNNRCG
+
