Use material theme to support multi-lang, docs structure changed.
1. Change the theme name from readthedocs to material
2. Use theme/language tag and add extra settings to mkdocs.yml
3. Modified index.md in the root directory

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,10 +2,18 @@ site_name: U.R.Lucky
 
 nav:
   - index.md
-  - Chapter1: ch1.md
 
 theme:
-  name: readthedocs
+  name: material
+  language: en # (1)!  
   analytics:
     gtag: G-36HTPNNRCG
 
+extra:
+  alternate:
+    - name: English
+      link: /en/ # (1)!
+      lang: en
+    - name: 中文
+      link: /zh/
+      lang: zh
