Use privacy plugin to preload fonts from our website itself, according to https://squidfunk.github.io/mkdocs-material/plugins/privacy.
And use .gitignore to avoid files inside .cache being version-controlled.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,7 +6,6 @@ nav:
 theme:
   name: material
   language: en # (1)!
-  font: false
   analytics:
     gtag: G-36HTPNNRCG
 
@@ -18,3 +17,6 @@ extra:
     - name: 中文
       link: /zh/
       lang: zh
+
+plugins:
+  - privacy
